--- a/debian/rules
+++ b/debian/rules
@@ -11,9 +11,8 @@
 #   export WANT_PIM=1
 #   export WANT_OSPFAPI=1
 #   export WANT_TCP_ZEBRA=0
-export WANT_BGP_VNC=0
+#   export WANT_BGP_VNC=0
 export WANT_CUMULUS_MODE=1
-export WANT_SNMP=1
 #   export WANT_MULTIPATH=1
 #   export WANT_RPKI=0
 #
@@ -120,105 +119,104 @@ MAKEFLAGS += -j$(DEBIAN_JOBS)
 endif
 
 %:
-    dh $@ --with=systemd,autoreconf --parallel --dbg-package=frr-dbg --list-missing
+	dh $@ --with=systemd,autoreconf --parallel --dbg-package=frr-dbg --list-missing
 
 override_dh_gencontrol:
 ifeq ($(WANT_RPKI), 1)
-    dh_gencontrol -- -Vdist:Depends="librtr0 (>= 0.5)"
+	dh_gencontrol -- -Vdist:Depends="librtr0 (>= 0.5)"
 else
-    dh_gencontrol
+	dh_gencontrol
 endif
 
 override_dh_auto_configure:
-    # Frr needs /proc to check some BSD vs Linux specific stuff.
-    # Else it fails with an obscure error message pointing out that
-    # IPCTL_FORWARDING is an undefined symbol which is not very helpful.
-    @if ! [ -d /proc/1 ]; then \
-        echo "./configure needs a mounted /proc"; \
-        exit 1; \
-    fi
+	# Frr needs /proc to check some BSD vs Linux specific stuff.
+	# Else it fails with an obscure error message pointing out that
+	# IPCTL_FORWARDING is an undefined symbol which is not very helpful.
+	@if ! [ -d /proc/1 ]; then \
+		echo "./configure needs a mounted /proc"; \
+		exit 1; \
+	fi
 
-    if ! [ -e config.status ]; then \
-    dh_auto_configure -- \
-        --enable-exampledir=/usr/share/doc/frr/examples/ \
-        --localstatedir=/var/run/frr \
-        --sbindir=/usr/lib/frr \
-        --sysconfdir=/etc/frr \
-        $(USE_SNMP) \
-        $(USE_OSPFAPI) \
-        $(USE_MULTIPATH) \
-        $(USE_LDP) \
-        $(USE_TCP_ZEBRA) \
-        --enable-fpm \
-        $(USE_FRR_USER) $(USE_FRR_GROUP) \
-        $(USE_FRR_VTY_GROUP) \
-        --enable-configfile-mask=0640 \
-        --enable-logfile-mask=0640 \
-        --enable-werror \
-        --with-libpam \
-        --enable-systemd=yes \
-        --enable-poll=yes \
-        --enable-oldvpn-commands=yes --enable-datacenter=yes --with-vtysh-pager=cat --enable-vtysh=yes \
-        $(USE_CUMULUS) \
-        $(USE_PIM) \
-        --enable-dependency-tracking \
-        $(USE_BGP_VNC) \
-        $(USE_RPKI) \
-        $(shell dpkg-buildflags --export=configure); \
-    fi
+	if ! [ -e config.status ]; then \
+	dh_auto_configure -- \
+		--enable-exampledir=/usr/share/doc/frr/examples/ \
+		--localstatedir=/var/run/frr \
+		--sbindir=/usr/lib/frr \
+		--sysconfdir=/etc/frr \
+		$(USE_SNMP) \
+		$(USE_OSPFAPI) \
+		$(USE_MULTIPATH) \
+		$(USE_LDP) \
+		$(USE_TCP_ZEBRA) \
+		--enable-fpm \
+		$(USE_FRR_USER) $(USE_FRR_GROUP) \
+		$(USE_FRR_VTY_GROUP) \
+		--enable-configfile-mask=0640 \
+		--enable-logfile-mask=0640 \
+		--enable-werror \
+		--with-libpam \
+		--enable-systemd=yes \
+		--enable-poll=yes \
+		$(USE_CUMULUS) \
+		$(USE_PIM) \
+		--enable-dependency-tracking \
+		$(USE_BGP_VNC) \
+		$(USE_RPKI) \
+		$(shell dpkg-buildflags --export=configure); \
+	fi
 
 override_dh_auto_build:
-    #dh_auto_build
-    $(MAKE)
-    dh_auto_build -- -C doc draft-zebra-00.txt
+	#dh_auto_build
+	$(MAKE)
+	dh_auto_build -- -C doc draft-zebra-00.txt
 
 
-    # doc/ is a bit crazy
+	# doc/ is a bit crazy
 ifeq ($(GENERATE_PDF), 1)
-    dh_auto_build -- -C doc frr.pdf || true # pdfetex fails with exit code 1 but still produces a good looking .pdf
+	dh_auto_build -- -C doc frr.pdf || true # pdfetex fails with exit code 1 but still produces a good looking .pdf
 endif
-    rm -vf doc/frr.info
-    dh_auto_build -- -C doc frr.info
-    rm -vf doc/frr.info.html*
+	rm -vf doc/frr.info
+	dh_auto_build -- -C doc frr.info
+	rm -vf doc/frr.info.html*
 
 override_dh_auto_test:
 
 override_dh_auto_install:
-    dh_auto_install
+	dh_auto_install
 
-    # installed in frr-pythontools
-    rm debian/tmp/usr/lib/frr/frr-reload.py
+	# installed in frr-pythontools
+	rm debian/tmp/usr/lib/frr/frr-reload.py
 
-    # cleaning up the info dir
-    rm -f debian/tmp/usr/share/info/dir*
+	# cleaning up the info dir
+	rm -f debian/tmp/usr/share/info/dir*
 
-    # install config files
-    mkdir -p debian/tmp/etc/frr/
-    perl -pi -e 's#^!log file #!log file /var/log/frr/#' debian/tmp/usr/share/doc/frr/examples/*sample*
+	# install config files
+	mkdir -p debian/tmp/etc/frr/
+	perl -pi -e 's#^!log file #!log file /var/log/frr/#' debian/tmp/usr/share/doc/frr/examples/*sample*
 
-    # installing the Frr specific SNMP MIB
+	# installing the Frr specific SNMP MIB
 ifeq ($(WANT_SNMP), 1)
-    install -D -m 644 ./zebra/GNOME-PRODUCT-ZEBRA-MIB debian/tmp/usr/share/snmp/mibs/GNOME-PRODUCT-ZEBRA-MIB
+	install -D -m 644 ./zebra/GNOME-PRODUCT-ZEBRA-MIB debian/tmp/usr/share/snmp/mibs/GNOME-PRODUCT-ZEBRA-MIB
 else
-    mkdir -p debian/tmp/usr/share/snmp/mibs/
+	mkdir -p debian/tmp/usr/share/snmp/mibs/
 endif
 
-    # cleaning .la files
-    sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/*.la
-    sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/frr/modules/*.la
+	# cleaning .la files
+	sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/*.la
+	sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/frr/modules/*.la
 
 override_dh_systemd_start:
-    dh_systemd_start frr.service
+	dh_systemd_start frr.service
 
 override_dh_systemd_enable:
-    dh_systemd_enable frr.service
+	dh_systemd_enable frr.service
 
 # backports
 SRCPKG = frr
 KNOWN_BACKPORTS = debian8 debian9 ubuntu12.04 ubuntu14.04 ubuntu16.04 ubuntu17.10 ubuntu18.04
 DEBIAN_VERSION := $(shell dh_testdir && \
-        dpkg-parsechangelog -c1 < debian/changelog | \
-        sed -rn 's/^Version: ?//p')
+		dpkg-parsechangelog -c1 < debian/changelog | \
+		sed -rn 's/^Version: ?//p')
 ORIG_VERSION := $(DEBIAN_VERSION)
 -include debian/backports/rules
 
@@ -226,18 +224,18 @@ ifneq ($(TARBALLDIR),)
 ifeq ($(wildcard frr-$(ORIG_VERSION).tar.gz),frr-$(ORIG_VERSION).tar.gz)
 
 $(TARBALLDIR)/$(SRCPKG)_$(ORIG_VERSION).orig.tar.gz: \
-        frr-$(ORIG_VERSION).tar.gz
-    cp $< $@
+		frr-$(ORIG_VERSION).tar.gz
+	cp $< $@
 
 else # wildcard frr-$(ORIG_VERSION).tar.gz
 
 # better error message on missing .orig.tar.gz
 $(TARBALLDIR)/$(SRCPKG)_$(ORIG_VERSION).orig.tar.gz:
-    @ echo "\`$(TARBALLDIR)/$(SRCPKG)-$(ORIG_VERSION).tar.gz'" not \
-        found and not generated by debian/rules. Provided you have the \
-        necessary packages installed, you can generate it yourself via \
-        "\"./bootstrap.sh && ./configure && make dist\"".
-    exit 1
+	@ echo "\`$(TARBALLDIR)/$(SRCPKG)-$(ORIG_VERSION).tar.gz'" not \
+		found and not generated by debian/rules. Provided you have the \
+		necessary packages installed, you can generate it yourself via \
+		"\"./bootstrap.sh && ./configure && make dist\"".
+	exit 1
 
 endif # wildcard frr-$(ORIG_VERSION).tar.gz
 endif # TARBALLDIR nonempty
